Setup monorepo to link package with example app

--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "headless-comments",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
-  "source": "src/index.ts",
-  "main": "dist/main.js",
-  "module": "dist/module.js",
-  "scripts": {
-    "dev": "parcel watch",
-    "build": "parcel build"
-  },
-  "keywords": [],
   "author": "",
+  "keywords": [],
   "license": "ISC",
+  "workspaces": [
+    "package",
+    "example"
+  ],
+  "scripts": {
+    "dev": "turbo dev"
+  },
   "devDependencies": {
-    "parcel": "^2.8.3"
+    "turbo": "^1.7.0"
   }
 }
