feat(firebase): manage firebase instance

--- a/example/package.json
+++ b/example/package.json
@@ -7,9 +7,10 @@
     "dev": "vite"
   },
   "dependencies": {
+    "@headless-comments/react": "*",
+    "firebase": "^9.16.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@headless-comments/react": "*"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
