--- a/package/package.json
+++ b/package/package.json
@@ -11,17 +11,25 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "dev": "parcel watch",
+    "test": "jest",
     "build": "parcel build"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.16.5",
     "@parcel/packager-ts": "^2.8.3",
     "@parcel/transformer-typescript-types": "^2.8.3",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.4.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "parcel": "^2.8.3",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "firebase": "^9.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
