--- a/package/package.json
+++ b/package/package.json
@@ -15,6 +15,7 @@
     "build": "parcel build"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.16.5",
     "@parcel/packager-ts": "^2.8.3",
