--- a/package/package.json
+++ b/package/package.json
@@ -10,9 +10,11 @@
   "module": "dist/module.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "predev": "npm run clean",
     "dev": "parcel watch",
     "test": "jest",
-    "build": "parcel build"
+    "build": "parcel build",
+    "clean": "rm -rf .parcel-cache"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
