--- a/example/package.json
+++ b/example/package.json
@@ -4,7 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build",
+    "deploy": "firebase deploy --only hosting",
+    "deploy:stage": "firebase hosting:channel:deploy --expires 7d"
   },
   "dependencies": {
     "@headless-comments/react": "*",
@@ -16,6 +19,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "firebase-tools": "^11.22.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
