--- a/package/package.json
+++ b/package/package.json
@@ -28,7 +28,9 @@
     "dev": "parcel watch",
     "test": "jest",
     "build": "parcel build",
-    "clean": "rm -rf .parcel-cache"
+    "prepublish": "npm run clean && npm run build",
+    "publish": "npm publish --access=public",
+    "clean": "rimraf dist .parcel-cache"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
@@ -43,6 +45,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "parcel": "^2.8.3",
+    "rimraf": "^4.1.2",
     "typescript": "^4.9.4"
   },
   "peerDependencies": {
