--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,8 @@
   "pipeline": {
     "dev": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "dependsOn": ["build"]
     },
     "test": {},
     "build": {
